unpackaged/main/default/objects/Compliance_Suppression__c/Compliance_Suppression__c.object-meta.xml
<CustomObject>
    <description>Object to store requests that come in through compliance channels (ex: CCPA) to scrub/suppress data from future marketing efforts.</description>
    <label>Compliance Suppression</label>
    <nameField>
        <label>Compliance Suppression Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>