unpackaged/main/default/objects/Compliance_Suppression__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street_Adress__c&amp;", "&amp;City__c&amp;", "&amp;State__c&amp;" "&amp;Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>