unpackaged/main/default/objects/Compliance_Suppression__c/fields/Street_Adress__c.field-meta.xml
<CustomField>
    <fullName>Street_Adress__c</fullName>
    <label>Street Adress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>